# rpi-pico-playground

embassy/: Cargo.toml  flash-pico
embassy/.cargo/: config.toml
embassy/src/: infrared.rs  lib.rs
